# Pheidippides

./: .gitignore  LICENSE  README.md  bot.py  config.py  docker-compose.yml  krolya.py  pyproject.toml  requirements.txt  server.py  static.json
app/: caching.py  config.py  converter.py  crypto_api_service.py  objects.py  redis_key_storage.py  schedule.py  static.py
app/handlers/: common_commands.py  get_file_id_server.py  inline_mode.py  old.py  schedule_manager.py
src/: .env_example  Dockerfile  pyproject.toml  server.py
src/app/: caching.py  chat_storage.py  config.py  converter.py  mood_stickers.json  objects.py  schedule.py  static.py
src/app/handlers/: inline_mode.py  schedule_manager.py
src/upload_static_server/: server.py
upload_static_server/: server.py
