[tool.poetry]
name = "krolya"
version = "0.1.0"
description = ""
authors = ["inauris <inauris@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
python-dotenv = "^0.20.0"
aiogram = "^2.22.1"

[tool.poetry.dev-dependencies]
pynvim = "^0.4.3"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
