[tool.poetry]
name = "pheidippides"
version = "0.1.0"
description = ""
authors = ["inauris <inauris@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.22.1"
python-dotenv = "^0.21.0"
redis = "^4.3.4"
aioschedule = "^0.5.2"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
isort = "^5.10.1"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
